# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1758.2.215 2012/01/23 11:05:13 mab Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.12 ????-??-??
 - 2012-01-23 Fixed bug#8019 - Ticket customer info widget has scroll bars
 - 2012-01-20 Fixed bug#8128 - Ticket Unwatch may lead to errorscreen.
 - 2012-01-16 Creation of QueueObject was not possible because of missing EncodeObject in CustomerUserGenericTicket.pm
 - 2011-12-20 Fixed bug#8035 - SOAP interface does not allow to create/update
    CustomerCompany records.
 - 2011-12-19 Fixed bug#7005 - JavaScript Init function is executed more than once in TicketZoom
 - 2011-12-14 Fixed bug#7014 - Inline article gets bigger than Ticket::Frontend::HTMLArticleHeightMax.
 - 2011-12-16 Fixed Lithuanian language file encoding.
 - 2011-12-14 Fixed bug#8000 - Queues are translated if are displayed in list-style.
 - 2011-12-13 Fixed bug#7020 - Error in MYSQL Syntax when CustomerID contains special characters.
 - 2011-12-12 Improved #7526 - Automatic TicketSearch for special characters (, ), &, - fails.
 - 2011-12-09 Fixed bug#7995 - Previous owner is missing in AgentTicketMove.
 - 2011-12-06 Fixed bug#5253 - User preferences are updated when displaying an overview.
 - 2011-12-05 Fixed bug#7971 - ACL to restrict Priority based on Service does not work in Customer
    interface
 - 2011-12-05 Fixed bug#7864 - Inconsequent wrapping of text causes ugly notifications.
 - 2011-12-05 Fixed bug#7338 - Upgrade Script DBUpdate-to-3.0.pl fails to create
    virtual_fs tables on oracle.
 - 2011-12-02 Fixed bug#7442 - Dashboard permission check for multiple Groups only
    tests first group.
 - 2011-11-29 Fixed bug#7719 - Agent login page does not offer user to save password
    with Firefox browser.